--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@ body {
 header {
       width: 100%;
       height: 100vh;
-      background: url(assets/images/header2.jpeg) no-repeat 50% 50%;
+      background: url( no-repeat 50% 50%;
       background-size: cover;
-       background-color: rgba(0,0,0,.5);
+      background-color: rgba(0,0,0,.5);
 }
 
 .content {
@@ -81,7 +81,7 @@ nav ul {
 }
 
 .jumbotron-content {
-      height: 100%;
+      /*height: 100%;*/
       width:100%;
       padding: 100px 320px;
       display: flex;
@@ -93,6 +93,42 @@ nav ul {
       
 }
 
+/*Jumobotro Buttons*/
+
+
+.btn {
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+ /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+ }
+
+/* Demo Stuff End -> */
+
+/* <- Magic Stuff Start */
+
+.btn:hover {
+  background-position: right center; /* change the direction of the change here */
+}
+
+.btn-1 {
+  background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+}
+
+.btn-2 {
+  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+}
+
+/**/
+/**/
+
 .jumbotron-content h3 {
       font-family: 'Quicksand', sans-serif;
       font-size: 74px;
@@ -101,20 +137,6 @@ nav ul {
       line-height: 73px;
 }
 
-.jumbotron-content button {
-  background-color: transparent;
-  color: white;
-  border: 1px solid white;
-  padding: 10px;
-  margin: 20px 0px 0px 0px;
-  font-size: 1.2em;
-}
-
-.jumtbotron-content button:hover {
-  color: #c57ed3;
-  border-color: #c57ed3;
-
-}
 
 nav.black ul {
       background: #000;
@@ -201,14 +223,39 @@ body > div > header > nav > div.menu > ul > li.mail-list > a {
 }
 
 
+/**/
+
+
+
+
+
+#videoBG {
+    position:fixed;
+    z-index: -1;
+
+}
+
+/***********/
+/*Promotion*/
+/***********/
+
+
+
 /*********/
 /*founder*/
 /*********/
 
 .founder {
       background: url("assets/images/tiffany.JPG") no-repeat 50% 50%;
-      
 }
+
+
+
+
+
+/********/
+/*Button*/
+/********/
 
 /********/
 /*Footer*/
@@ -217,4 +264,11 @@ body > div > header > nav > div.menu > ul > li.mail-list > a {
 footer {
       height: 200px;
       background-color: gray;
+}
+
+
+
+#sect2 {
+      height: 800px;
+      background-color: #fff;
 }
